--- a/tests.html
+++ b/tests.html
@@ -14,6 +14,7 @@
             <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
         <!--<![endif]-->
         
+        <script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js" type="text/javascript"></script>
         <script src="//code.jquery.com/qunit/qunit-1.12.0.js" type="text/javascript"></script>
         <script src="https://rawgithub.com/nathanrobinson/knockout.pager/master/tests.js" type="text/javascript"></script>
 
