--- a/tests.html
+++ b/tests.html
@@ -16,6 +16,7 @@
         
         <script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js" type="text/javascript"></script>
         <script src="//code.jquery.com/qunit/qunit-1.12.0.js" type="text/javascript"></script>
+        <script src="https://rawgithub.com/nathanrobinson/knockout.pager/master/knockout.pager.js" type="text/javascript"></script>
         <script src="https://rawgithub.com/nathanrobinson/knockout.pager/master/tests.js" type="text/javascript"></script>
 
     </head>
