--- a/tests.html
+++ b/tests.html
@@ -28,6 +28,7 @@
 
         <style>
             #testBinding { 
+                margin: 10px;
                 display: inline-block; 
                 border: 1px solid #012;
                 
