--- a/tests.html
+++ b/tests.html
@@ -31,11 +31,12 @@
                 margin: 10px;
                 display: inline-block; 
                 border: 1px solid #012;
-                
--moz-box-shadow: 5px 5px 3px #333;
--webkit-box-shadow: 5px 5px 3px #333;
-box-shadow: 5px 5px 3px #333;
+                border-radius: 3px;
+                -moz-box-shadow: 5px 5px 3px #888;
+                -webkit-box-shadow: 5px 5px 3px #888;
+                box-shadow: 5px 5px 3px #888;
             }
+            #testBinding table { border-collapse: collapse; margin: auto;}
             #testBinding thead tr { 
                 background: #cfe7fa; /* Old browsers */
 /* IE9 SVG, needs conditional override of 'filter' to 'none' */
