--- a/tests.html
+++ b/tests.html
@@ -55,7 +55,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfe7fa', end
     </head>
     <body>
         <div id="testBinding">
-            <div data-bind="pageSize: observableArray"></div>
+            <div data-bind="pageSizeControl: observableArray, pageSize: pageSize"></div>
             <table>
                 <thead>
                     <tr><th>$index</th><th>Key</th><th>Value</th></tr>
