--- a/tests.html
+++ b/tests.html
@@ -65,7 +65,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfe7fa', end
                         <td data-bind="text: $index"></td>
                         <td data-bind="text: key"></td>
                         <td data-bind="text: value"></td>
-                        <td class=".pageSize" data-bind="text: $parent.pageSize"></td>
+                        <td class=".parentPageSize" data-bind="text: $parent.pageSize"></td>
                     </tr>
                 </tbody>
             </table>
