--- a/tests.html
+++ b/tests.html
@@ -65,7 +65,7 @@ background: linear-gradient(to bottom, #cffae7 20%,#63c193 90%); /* W3C */
             }
             #testBinding2 tbody tr:nth-child(odd) { background: #acb };
             
-            h1 { clear: both; }
+            #qunit-header { clear: both; }
         </style>
     </head>
     <body>
