--- a/tests.html
+++ b/tests.html
@@ -119,12 +119,12 @@ background: linear-gradient(to bottom, #facfe7 20%,#c16393 90%); /* W3C */
             <div data-bind="pageLinks: array"></div>
         </div>
         <div id="testBinding3" class="bindingDiv">
-            <div data-bind="pageSizeControl: array, pageSize: pageSize"></div>
+            <div data-bind="pageSizeControl: observableArray, pageSize: pageSize"></div>
             <table>
                 <thead>
                     <tr><th>$index</th><th>Key</th><th>Value</th><th>Page Size</th></tr>
                 </thead>
-                <tbody data-bind="pagedForeach: array">
+                <tbody data-bind="pagedForeach: observableArray">
                     <tr>
                         <td data-bind="text: $index"></td>
                         <td data-bind="text: key"></td>
@@ -133,7 +133,7 @@ background: linear-gradient(to bottom, #facfe7 20%,#c16393 90%); /* W3C */
                     </tr>
                 </tbody>
             </table>
-            <div data-bind="pageLinks: array"></div>
+            <div data-bind="pageLinks: observableArray"></div>
         </div>
         <div class="clear">
             <h1 id="qunit-header">Unit Tests</h1>
