--- a/tests.html
+++ b/tests.html
@@ -81,7 +81,7 @@ background: linear-gradient(to bottom, #c69 20%,#936 90%); /* W3C */
             #testBinding3 tbody tr:nth-child(odd) { background: #cab; }
             
             .bindingDiv tbody tr > td {
-                padding: 3px;
+                padding: 0 3px;
                 text-align: center;
             }
             
