--- a/tests.html
+++ b/tests.html
@@ -182,7 +182,7 @@ background: linear-gradient(to bottom, #9c6 20%,#693 90%); /* W3C */
                     </tr>
                 </tbody>
             </table>
-            <div data-bind="pageLinks: serverMethod"></div>
+            <div data-bind="pageLinks: serverMethod, totalItems: totalItems"></div>
         </div>
         <div class="clear">
             <h1 id="qunit-header">Unit Tests</h1>
