--- a/tests.html
+++ b/tests.html
@@ -95,6 +95,21 @@ background: linear-gradient(to bottom, #9c6 20%,#693 90%); /* W3C */
             }
             #testBinding4 tbody tr:nth-child(odd) { background: #bca; }
             
+            #testBinding5 {
+                border: 1px solid #120;
+                }
+            #testBinding5 thead tr {
+                color: white;
+                background: #96c; /* Old browsers */
+background: -moz-linear-gradient(top, #96c 20%, #639 90%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(20%,#96c), color-stop(90%,#639)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #96c 20%,#639 90%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #96c 20%,#639 90%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #96c 20%,#639 90%); /* IE10+ */
+background: linear-gradient(to bottom, #96c 20%,#639 90%); /* W3C */
+            }
+            #testBinding5 tbody tr:nth-child(odd) { background: #bac; }
+            
             .bindingDiv tbody tr > td {
                 padding: 0 3px;
                 text-align: center;
@@ -168,6 +183,23 @@ background: linear-gradient(to bottom, #9c6 20%,#693 90%); /* W3C */
             <div data-bind="pageLinks: observableArray"></div>
         </div>
         <div id="testBinding4" class="bindingDiv">
+            <div>Items per page: <span data-bind="pageSizeControl: serverMethod, pageSize: pageSize"></span></div>
+            <table>
+                <thead>
+                    <tr><th>$index</th><th>Key</th><th>Value</th><th>Page Size</th></tr>
+                </thead>
+                <tbody data-bind="pagedForeach: serverMethod">
+                    <tr>
+                        <td data-bind="text: $index"></td>
+                        <td data-bind="text: key"></td>
+                        <td data-bind="text: value"></td>
+                        <td class="parentPageSize" data-bind="text: $parent.pageSize"></td>
+                    </tr>
+                </tbody>
+            </table>
+            <div data-bind="pageLinks: serverMethod, totalItems: totalItems"></div>
+        </div>
+        <div id="testBinding5" class="bindingDiv">
             <div>Items per page: <span data-bind="pageSizeControl: serverMethod, pageSize: pageSize"></span></div>
             <table>
                 <thead>
