--- a/tests.html
+++ b/tests.html
@@ -37,7 +37,8 @@
                 box-shadow: 5px 5px 3px #888;
                 float: left;
             }
-            .bindingDiv table { border-collapse: collapse; margin: auto;}
+            .bindingDiv .pager a { text-decoration: none; } 
+            .bindingDiv table { border-collapse: collapse; margin: auto; width: 100%;}
             #testBinding thead tr {
                 color: white;
                 background: #69c; /* Old browsers */
